objects/ssot__PartyIdentification__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreationEventId__c</fullName>
        <label>Creation Event</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreationEventObject__c</fullName>
        <label>Creation Event Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Identification Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IdentificationNumber__c</fullName>
        <label>Identification Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssuedAtLocation__c</fullName>
        <label>Issued At Location</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssuedByAuthority__c</fullName>
        <label>Issued By Authority</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssuedDate__c</fullName>
        <label>Issued Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Identification Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyIdentificationTypeId__c</fullName>
        <label>Party Identification Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyRoleId__c</fullName>
        <label>Party Role</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VerifiedByUserId__c</fullName>
        <label>Verified By User</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VerifiedDate__c</fullName>
        <label>Verified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761176956_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual_Id_map_PartyIdentificatio_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>Individual_Id_map_PartyIdentificatio_rel</relationshipLabel>
        <relationshipName>rel_1697761176956_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761191934_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyIdentification_PartyId_map_Indi_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>PartyIdentification_PartyId_map_Indi_rel</relationshipLabel>
        <relationshipName>rel_1697761191934_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>